Hopefully final commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello World</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="webste for HW5">
+        <meta name="author" content="Spence Simmons">
+        <meta name="viewport" content="width=device-width, initial-scaled=1.0">
+        <title>HW #5</title>
     </head>
+    <body>
+        <div id="intro-div" class="class1">
+            <h1>Juggling is fun!</h1>
+            <a href="https://www.youtube.com/watch?v=x2_j6kMg1co&ab_channel=NielsDuinker" id="link">Here's a tutorial</a>
+        </div>
+        <div id="explanation-div" class="class1">
+            margin: 12px 12px 12px 12px
+            border: 12px 12px 12px 12px
+            padding: 12px 12px 12px 12px
+            height: 12px 12px 12px 12px
+            width: 12px 12px 12px 12px
+            <p>Juggling is a great hobby to have! You can learn it very quickly and it's a skill that never leaves you.</p>
+            <img url="https://www.google.com/url?sa=i&url=https%3A%2F%2Fbusinessmagazinegainesville.com%2Fjuggling-for-business%2F&psig=AOvVaw20AjB8Y2sCcUiVR_vwP43m&ust=1665782277672000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCPCn2t2Q3voCFQAAAAAdAAAAABAD">
+        </div>
+    </body>
+    <style>
+        #link{
+            color: cyan
+        }
+
+        p{
+            color:darkorchid
+        }
+
+        .class1{
+            font-style: italic;
+        }
+    </style>
+</html>
